styles/components/_text.scss
// typography: font stuff

.text {
  display: block;
  letter-spacing: 0.6px;
  line-height: 25px;

  &.-large,
  &.-huge {
    -webkit-margin-before: 0.67em;
    -webkit-margin-after: 0.67em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
    font-weight: bold;
    font-family: 'Domine', serif;
  }

  &.-medium {
    font-size: 20px;
  }

  &.-large {
    font-size: 30px;
  }

  &.-huge {
    font-size: 50px;
  }
}

